# cifparse

./: .gitignore  CHANGELOG.md  README.md  setup.cfg
.github/: RELEASE.md
.github/workflows/: python-publish.yml
docs/: CIFPAirport.md  CIFPAirway.md  CIFPAirwayPoint.md  CIFPControlledAirspace.md  CIFPControlledAirspacePoint.md  CIFPControlledAirspaceSegment.md  CIFPHeliport.md  CIFPProcedure.md  CIFPProcedurePoint.md  CIFPProcedureSegment.md  CIFPProcedureSubsegment.md  CIFPRestrictiveAirspace.md  CIFPRestrictiveAirspacePoint.md  CIFPRestrictiveAirspaceSegment.md  CIFPRunway.md  CIFPWaypoint.md  CIFP_LOC_GS.md  CIFP_NDB.md  CIFP_VHF_DME.md
examples/: sid_star_to_file.py
src/cifparse/: __init__.py  cifp_airport.py  cifp_airway.py  cifp_airway_point.py  cifp_controlled_airspace.py  cifp_controlled_airspace_point.py  cifp_controlled_airspace_segment.py  cifp_enroute_point.py  cifp_functions.py  cifp_heliport.py  cifp_loc_gs.py  cifp_ndb.py  cifp_procedure.py  cifp_procedure_point.py  cifp_procedure_segment.py  cifp_procedure_subsegment.py  cifp_restrictive_airspace.py  cifp_restrictive_airspace_point.py  cifp_restrictive_airspace_segment.py  cifp_runway.py  cifp_terminal_point.py  cifp_vhf_dme.py  cifp_waypoint.py  cifpairport.py  cifpairway.py  cifpenroutepoint.py  cifpndb.py  cifpprocedure.py  coordinate.py  main.py
