[metadata]
name = cifparse
version = 0.9.1
author = misterrodg
description = A python parser for the FAA CIFP
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/misterrodg/cifparse
project_urls = 
    Bug Tracker = https://github.com/misterrodg/cifparse/issues
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src